--- a/package.json
+++ b/package.json
@@ -1,26 +1,26 @@
 {
-  "name": "Webex-Bot-Starter",
+  "name": "Webex-Calling-Admin-Bot",
   "version": "1.0.0",
-  "description": "Starter template for creating a Webex Teams bot",
+  "description": "A Webex Calling Admin Bot",
   "main": "index.js",
   "scripts": {
     "start": "npm install && node --use_strict index.js"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/tbd/webexbotstarter.git"
+    "url": "git+https://github.com/avholloway/webex-calling-admin-bot.git"
   },
   "keywords": [
-    "Cisco",
     "Webex",
-    "webex-bot-framework"
+    "Calling",
+    "Admin Bot"
   ],
-  "author": "Phil Bellanti",
-  "license": "ISC",
+  "author": "Anthony Holloway",
+  "license": "MIT",
   "bugs": {
-    "url": "https://github.com/tbd/webexbotstarter/issues"
+    "url": "https://github.com/avholloway/webex-calling-admin-bot/issues"
   },
-  "homepage": "https://github.com/tbd/webexbotstarter#readme",
+  "homepage": "https://github.com/avholloway/webex-calling-admin-bot/",
   "dependencies": {
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
